# ocaml_workout

./: dune-project
lib/: dune  flatten_a_list.ml  last_two_tail_list.ml  length_encoding.ml  length_of_list.ml  list_is_palindrome.ml  nth_tail_list.ml  option_tail_list.ml  pack_consecutive_elements.ml  remove_list_duplicates.ml  reverse_list.ml  test_exercise.ml  types.ml
test/: dune  test_flatten_a_list.ml  test_last_two_tail_list.ml  test_length_encoding.ml  test_length_of_list.ml  test_list_is_palindrome.ml  test_nth_tails_list.ml  test_ocaml_workout.ml  test_pack_consecutive_elements.ml  test_remove_list_duplicates.ml  test_reverse_list.ml  test_tail_of_list.ml
